--- a/adoptme/package.json
+++ b/adoptme/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "element-ui": "^2.3.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-background": "^0.1.2",
+    "vue-videobg": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
