--- a/adoptme_backend/package.json
+++ b/adoptme_backend/package.json
@@ -1,16 +1,17 @@
 {
   "name": "adoptme_backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Server for adoptme website",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "João Chaves Inês Ferreira Nuno Castro",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "http-status": "^1.1.0",
+    "mongoose": "^5.1.1"
   }
 }
