--- a/adoptme/package.json
+++ b/adoptme/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.3.6",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1",
     "vue-video-background": "^0.1.2",
     "vue-videobg": "^2.0.0"
